--- a/style.css
+++ b/style.css
@@ -3,8 +3,6 @@ body {
     padding: 0;
     background: #FFF;
     overflow-x: hidden;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
 }
 
 a,
@@ -14,35 +12,30 @@ button {
 }
 
 a:hover {
-    text-decoration: none;
     cursor: pointer;
 }
 
-#page-loading-blocs-notifaction {
+/*#page-loading-blocs-notifaction {
     position: fixed;
     top: 0;
     bottom: 0;
     width: 100%;
     z-index: 100000;
     background: #FFFFFF url("img/pageload-spinner.gif") no-repeat center center;
-}
+}*/
 
 .bloc {
     width: 100%;
     clear: both;
     background: 50% 50% no-repeat;
-    padding: 0 50px;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     background-size: cover;
     position: relative;
 }
 
-.bloc .container {
+/*.bloc .container {
     padding-left: 0;
     padding-right: 0;
-}
+}*/
 
 .bloc-lg {
     padding: 100px 50px;
@@ -66,9 +59,6 @@ a:hover {
 .bg-tr-edge,
 .bg-br-edge,
 .bg-repeat {
-    -webkit-background-size: auto!important;
-    -moz-background-size: auto!important;
-    -o-background-size: auto!important;
     background-size: auto!important;
 }
 
@@ -93,6 +83,7 @@ a:hover {
 .texture-paper::before {
     background: url("img.2/texture-paper.png");
     background-size: 280px 280px;
+    opacity: 0.6;
 }
 
 .b-parallax {
@@ -100,11 +91,17 @@ a:hover {
 }
 
 .d-bloc {
-    color: rgba(255, 255, 255, .7);
+    color: white;
+    font-size: 1em;
 }
 
 .d-bloc button:hover {
-    color: rgba(255, 255, 255, .9);
+    color: white;
+}
+
+footer a
+{
+    color: black;
 }
 
 .d-bloc .icon-round,
@@ -133,7 +130,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: black;
 }
 
 .d-bloc .a-btn:hover,
@@ -277,14 +274,14 @@ a:hover {
     margin-left: 0;
 }
 
-.row.row-no-gutters > [class^="col-"],
+/*.row.row-no-gutters > [class^="col-"],
 .row.row-no-gutters > [class*=" col-"] {
     padding-right: 0;
     padding-left: 0;
-}
+}*/
 
 #bloc-1-hero h1 {
-    font-size: 32px;
+    font-size: 2em;
 }
 
 .navbar {
@@ -317,7 +314,7 @@ a:hover {
 
 .navbar .nav {
     padding-top: 2px;
-    margin-right: -16px;
+/*    margin-right: -16px;*/
     float: right;
     z-index: 1;
 }
@@ -368,7 +365,6 @@ a:hover {
         top: 50%;
         right: 20px;
         transform: translate(0, -50%);
-        -webkit-transform: translateY(-50%);
     }
     .nav > li .dropdown-menu a,
     .nav > li .dropdown-menu a:hover {
@@ -551,12 +547,10 @@ a[data-lightbox]:hover::before {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
 }
 
 a[data-lightbox]:hover img {
     opacity: 0.6;
-    -webkit-animation-fill-mode: none;
     animation-fill-mode: none;
 }
 
@@ -639,24 +633,30 @@ a[data-lightbox]:hover img {
     background: none;
 }
 
-h1,
-h2,
 h3,
-h4,
-h5,
 h6,
 p,
 label,
-.btn,
-a {
+.btn
+{
     font-family: "helvetica";
     font-weight: 400;
     color: #575757!important;
 }
 
-.container {
-    max-width: 1000px;
+a
+{
+    color: black;
 }
+
+a :hover
+{
+    color: white;
+}
+
+/*.container {
+    max-width: 1000px;
+}*/
 
 .hero-bloc-text {
     font-size: 38px;
@@ -677,7 +677,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 1em;
 }
 
 .tight-width-whitespace {
@@ -694,19 +694,22 @@ p {
     margin-top: 22px;
     color: #FFFFFF!important;
     text-transform: uppercase;
-    padding: 12px 28px 12px 28px;
+    padding: 12px 58px 12px 58px;
     font-size: 16px;
     font-weight: 700;
 }
 
 .social {
     max-width: 400px;
-    margin: auto auto auto auto;
+    margin: auto;
+    margin-bottom: 3rem;
+    margin-top: 3rem;
 }
 
 h2 {
     font-size: 22px;
     line-height: 1.4em;
+    color: white;
 }
 
 h3 {
@@ -723,11 +726,20 @@ h3 {
 }
 
 h1 {
-    color: #333333!important;
+    color: white;
+    font-size: 3rem;
 }
 
 h4 {
     color: #333333!important;
+    font-size: 1.8em;
+}
+
+#commentaire h4
+{
+    font-size: 1.5em;
+    font-style: italic;
+    font-weight: 300;
 }
 
 .icons {
@@ -766,21 +778,24 @@ h4 {
     background-color: #FFFFFF;
 }
 
-.bgc-dark-slate-blue {
+/*.bgc-dark-slate-blue {
     background-color: #364577;
-}
+}*/
 
 .bgc-atomic-tangerine {
     background-color: #F3976C;
+
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: white;
 }
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: black;
+    border: 2px solid white;
+
 }
 
 .btn-atomic-tangerine:hover {
@@ -825,6 +840,46 @@ h4 {
     background-image: url("img.2/image-de-presentation.jpg");
 }
 
+
+
+/* ===== MAJ ===== */
+
+#slogan
+{
+
+    justify-content: center;
+    align-content: center;
+}
+
+#slogan h2
+{
+    font-size: 3rem;
+    color: #575757;
+    margin-bottom: 5rem;
+}
+
+h5
+{
+    font-size: 2em;
+    color: white;
+    text-align: center;
+}
+
+footer p
+{
+    font-size: 1.2em;
+}
+
+footer ul
+{
+    padding-left: 0;
+}
+
+
+
+
+/* ===== MAJ END ===== */
+
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
@@ -848,13 +903,13 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -872,10 +927,7 @@ h4 {
         overflow-x: hidden;
         position: relative;
     }
-    .bloc {
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
-    }
+
     .bloc-group,
     .bloc-group .bloc {
         display: block;
@@ -884,8 +936,6 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left);
-        padding-right: constant(safe-area-inset-right);
     }
 }
 
@@ -920,8 +970,6 @@ h4 {
     .site-navigation {
         position: inherit;
         transform: none;
-        -webkit-transform: none;
-        -ms-transform: none;
     }
     .nav > li {
         margin-top: 0;
@@ -958,7 +1006,6 @@ h4 {
     .navbar-collapse {
         padding: 0;
         overflow-x: hidden;
-        -webkit-box-shadow: none;
         box-shadow: none;
     }
     .navbar-brand img {
