--- a/style.css
+++ b/style.css
@@ -195,10 +195,6 @@ footer a
     color: rgba(0, 0, 0, .5);
 }
 
-.d-bloc .panel button:hover,
-.l-bloc button:hover {
-    color: rgba(0, 0, 0, .7);
-}
 
 .l-bloc .icon-round,
 .l-bloc .icon-square,
@@ -274,12 +270,6 @@ footer a
     margin-left: 0;
 }
 
-/*.row.row-no-gutters > [class^="col-"],
-.row.row-no-gutters > [class*=" col-"] {
-    padding-right: 0;
-    padding-left: 0;
-}*/
-
 #bloc-1-hero h1 {
     font-size: 2em;
 }
@@ -314,7 +304,6 @@ footer a
 
 .navbar .nav {
     padding-top: 2px;
-/*    margin-right: -16px;*/
     float: right;
     z-index: 1;
 }
@@ -641,7 +630,7 @@ label,
 {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: black;
 }
 
 a
@@ -653,10 +642,6 @@ a :hover
 {
     color: white;
 }
-
-/*.container {
-    max-width: 1000px;
-}*/
 
 .hero-bloc-text {
     font-size: 38px;
@@ -692,7 +677,7 @@ p {
 
 .cta-hero {
     margin-top: 22px;
-    color: #FFFFFF!important;
+    color: black;
     text-transform: uppercase;
     padding: 12px 58px 12px 58px;
     font-size: 16px;
@@ -778,10 +763,6 @@ h4 {
     background-color: #FFFFFF;
 }
 
-/*.bgc-dark-slate-blue {
-    background-color: #364577;
-}*/
-
 .bgc-atomic-tangerine {
     background-color: #F3976C;
 
@@ -794,13 +775,15 @@ h4 {
 .btn-atomic-tangerine {
     background: #F3976C;
     color: black;
-    border: 2px solid white;
+    border: 2px solid black;
+    border-radius: 40px;
 
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
-    color: #FFFFFF!important;
+    color: white;
+    border: 2px solid white;
+
 }
 
 .ltc-white {
@@ -874,8 +857,6 @@ footer ul
 {
     padding-left: 0;
 }
-
-
 
 
 /* ===== MAJ END ===== */
