--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1435,7 +1435,7 @@ img {
 .img-responsive,
 .thumbnail a>img,
 .thumbnail>img {
-    /*display: block;*/
+    display: block;
     max-width: 100%;
     height: auto
 }
@@ -2010,10 +2010,10 @@ pre code {
     margin-left: auto
 }
 
-.row {
+/*.row {
     margin-right: -15px;
     margin-left: -15px
-}
+}*/
 
 .col-lg-1,
 .col-lg-10,
